--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
     "nodemon": "^3.1.9",
-    "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
   },
   "name": "cse341pets",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "swagger-autogen": "^2.23.7"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
+    "swagger": "node ./swagger.js"
   },
   "repository": {
     "type": "git",
